# manim-cpp-rewrite

./: .gitignore  CMakeLists.txt  CMakePresets.json  Plan- Manim Conversion to C++.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  installation_issue.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  documentation.md  hackathon.md
.github/workflows/: ci.yml  codeql.yml  cxx-ci.yml  cxx-docs.yml  cxx-package-channels.yml  cxx-plugin-abi-matrix.yml  cxx-release.yml  milestone-gate-review.yml  publish-docker.yml  python-publish.yml  release-publish-documentation.yml  zero-python-gate.yml
apps/manim_alias_manim/: CMakeLists.txt  main.cpp
apps/manim_alias_manimce/: CMakeLists.txt
apps/manim_cpp_cli/: CMakeLists.txt
apps/manim_cpp_extract_frames/: CMakeLists.txt  main.cpp
apps/manim_cpp_migrate/: CMakeLists.txt  main.cpp
config/: legacy_reference_allowlist.txt  original_manim_feature_cross_tests.tsv  python_allowlist.txt
docker/: readme.md
docs/: Makefile  make.bat
docs/api/: Doxyfile
docs/book/: book.toml
docs/book/src/: SUMMARY.md  architecture.md  cli.md  i18n.md  index.md  installation.md  migration.md  plugins.md  quickstart.md  testing.md
docs/i18n/fr/LC_MESSAGES/: api.po  book.po
docs/i18n/gettext/: api.pot  book.pot
docs/i18n/hi/LC_MESSAGES/: api.po  book.po
docs/i18n/pt/LC_MESSAGES/: api.po  book.po
docs/i18n/sv/LC_MESSAGES/: api.po  book.po
docs/plans/: 2026-02-14-manim-cpp-full-repository-rewrite-plan.md
docs/source/contributing/: testing.rst
example_scenes/: CMakeLists.txt  advanced_tex_fonts.cpp  basic.cpp  customtex.cpp  opengl.cpp
include/manim_cpp/: version.hpp
include/manim_cpp/animation/: animation.hpp  basic_animations.hpp  composition.hpp
include/manim_cpp/camera/: camera.hpp
include/manim_cpp/cli/: cli.hpp
include/manim_cpp/config/: config.hpp
include/manim_cpp/math/: core.hpp  eigen_adapter.hpp  graph_layout.hpp  isocurve.hpp  path_ops.hpp  triangulation.hpp
include/manim_cpp/migrate/: migrate.hpp
include/manim_cpp/mobject/: geometry.hpp  graph.hpp  mobject.hpp  value_tracker.hpp
include/manim_cpp/plugin/: loader.hpp  plugin.hpp  plugin_abi_v1.h
include/manim_cpp/renderer/: cairo_renderer.hpp  interaction.hpp  opengl_renderer.hpp  renderer.hpp  shader_paths.hpp
include/manim_cpp/scene/: media_format.hpp  moving_camera_scene.hpp  registry.hpp  scene.hpp  scene_file_writer.hpp  section.hpp  three_d_scene.hpp  zoomed_scene.hpp
include/manim_cpp/testing/: npz_archive.hpp
plugins/sdk/: plugin_sdk.hpp
scripts/: dev_changelog.sh  extract_frames.sh  make_and_open_docs.sh  template_docsting_with_example.md  template_docsting_with_example.rst
src/: CMakeLists.txt
src/manim_cpp/animation/: animation.cpp  basic_animations.cpp  composition.cpp
src/manim_cpp/camera/: camera.cpp
src/manim_cpp/cli/: cli.cpp
src/manim_cpp/config/: config.cpp
src/manim_cpp/math/: core.cpp  eigen_adapter.cpp  graph_layout.cpp  isocurve.cpp  path_ops.cpp  triangulation.cpp
src/manim_cpp/migrate/: migrate.cpp
src/manim_cpp/mobject/: geometry.cpp  graph.cpp  mobject.cpp  value_tracker.cpp
src/manim_cpp/plugin/: loader.cpp
src/manim_cpp/renderer/: cairo_renderer.cpp  interaction.cpp  opengl_renderer.cpp  renderer.cpp  shader_paths.cpp
src/manim_cpp/scene/: media_format.cpp  moving_camera_scene.cpp  registry.cpp  scene.cpp  scene_file_writer.cpp  three_d_scene.cpp  zoomed_scene.cpp
src/manim_cpp/testing/: npz_archive.cpp
tests_cpp/: CMakeLists.txt
tests_cpp/cli/: test_cli.cpp
tests_cpp/integration/: test_example_scenes.cpp
tests_cpp/migrate/: test_migrate.cpp
tests_cpp/plugin/: test_plugin_abi.cpp  test_plugin_loader.cpp  test_plugin_sdk.cpp
tests_cpp/plugin/fixtures/: sample_plugin.cpp
tests_cpp/render_regression/: test_bitwise_render_parity.cpp  test_control_data_npz.cpp
tests_cpp/render_regression/baselines/linux/: render_cairo.txt
tests_cpp/render_regression/baselines/macos/: render_opengl.txt
tests_cpp/unit/: test_animation_composition.cpp  test_animation_timeline.cpp  test_basic_animations.cpp  test_camera.cpp  test_config.cpp  test_eigen_adapter.cpp  test_geometry_mobjects.cpp  test_graph_layout.cpp  test_graph_mobject.cpp  test_interaction.cpp  test_isocurve.cpp  test_math_core.cpp  test_media_format.cpp  test_mobject.cpp  test_path_ops.cpp  test_renderer.cpp  test_scene_file_writer.cpp  test_scene_lifecycle.cpp  test_scene_random.cpp  test_scene_registry.cpp  test_scene_types.cpp  test_shader_paths.cpp  test_triangulation.cpp  test_value_tracker.cpp
tools/: check_no_python.sh
tools/docs/: build_docs.sh  check_i18n_catalog_scope.sh  check_i18n_catalogs.sh
tools/i18n/: extract_gettext.sh
tools/release/: generate_package_channel_manifests.sh  package_binaries.sh
tools/repo/: check_book_docs_coverage.sh  check_book_metadata_cxx.sh  check_changelog_markdown.sh  check_codeql_cpp.sh  check_cxx_release_workflow.sh  check_docker_tag_contract.sh  check_final_cutover_gate.sh  check_gettext_template_scope.sh  check_issue_templates_cxx.sh  check_legacy_artifacts_purged.sh  check_legacy_docs_purged.sh  check_legacy_python_workflows.sh  check_legacy_reference_scope.sh  check_manim_cfg_contract.sh  check_milestone_gate_review.sh  check_no_backup_artifacts.sh  check_no_duplicate_copy_artifacts.sh  check_no_python_script_runtime.sh  check_no_python_workflow_tooling.sh  check_no_rst_artifacts.sh  check_original_feature_cross_tests.sh  check_package_channel_workflow.sh  check_package_manifest_project_url.sh  check_plugin_abi_workflow.sh  check_pr_templates_cxx.sh  check_python_inventory.sh  check_readme_cxx.sh  check_toolchain_floor_contract.sh
tools/tests/: run_original_feature_cross_tests.sh
